--- a/Week2/1_Mon/index.html
+++ b/Week2/1_Mon/index.html
@@ -1,6 +1,6 @@
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="style.css" />
     <script>
       document.getElementById('emailForm').addEventListener('submit', function(e) {
     e.preventDefault();
