--- a/Week2/2_Tues/index.html
+++ b/Week2/2_Tues/index.html
@@ -33,7 +33,7 @@
             </div>
         </section>
 
-        <center><iframe width="560" height="315" src="https://www.youtube.com/embed/nv4FZAUZ0yA?si=TZIQl_uml6dzgu1k" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></center>
+        <center><iframe width="560" height="315" src="https://www.youtube.com/embed/nv4FZAUZ0yA?si=jYPbIVuYXn6ifUgJ&amp;controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></center>
           
         <section class="box-model-main">
             <h2>Inside the Book</h2>
