Improve mobile layout for author card section

--- a/Week2/3_Wed/index.html
+++ b/Week2/3_Wed/index.html
@@ -17,7 +17,7 @@
         <section class="author-card">
             <div class="badge">📖 New Release</div>
             <div class="book-container">
-                <img src="https://iili.io/3RBqR29.png" class="book-icon" width="250" height="350">
+                <img src="https://iili.io/3RBqR29.png" class="book-sector" width="250" height="350">
             </div>
             <div class="book-info">
                 <h1>America the Free</h1>
