--- a/Week2/4_Thurs/index.html
+++ b/Week2/4_Thurs/index.html
@@ -50,7 +50,7 @@
         <p>Join our FREE mailing list and stay connected with updates on new releases, author reflections, and exclusive content from Liberty Love.</p>
         <form id="emailForm" class="email-form">
   <div class="form-row">
-    <input type="text" id="name" name="name" placeholder="Your name" required>
+   <p> <input type="text" id="name" name="name" placeholder="Your name" required></p>
     <input type="email" id="email" name="email" placeholder="Enter your email" required>
   </div>
   <button type="submit" class="submit-btn">Sign Up</button>
